--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,8 +10,22 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+:root {
+  --clr-primary-1: #D33852;
+  --clr-primary-2:#EB4762;
+  --clr-primary-3:#CAF8FF;
+  --clr-border : #EBEBEB;
+  --clr-icon: #717171;
+  --clr-board-1:#A7F0F9;
+  --clr-board-2:#C5C5FC ;
+  --clr-board-3:#FFAEC0 ;
+  --clr-board-4: #FC6;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.card-board{
+  flex: 1 0 0%;
 }
